closes #755 'Menu' AppBar jumps during the entrance animation       https://github.com/winjs/winjs/issues/755
      Also:
      closes #846 AppBar close animation flickers
      https://github.com/winjs/winjs/issues/846
      closes #821 AppBar: Empty space shouldn't have background color during secondary command animation
      https://github.com/winjs/winjs/issues/821

      Previously the AppBar was using three elements to do the top and bottom animations for menu layout. For the top AppBar's resize animation only two elements were required and for the bottom AppBar's slide animation only one element was required.
      We combined the .win-appbar-menu element and the win-toolbar-container element into just one win-menu-element and re wrote the animations.

      OLD menu layout
      <win-appbar>
         <win-appbar-menu>
            <win-appbar-toolbarcontainer>
               <win-toolbar>

      NEW menu layout
      <win-appbar>
         <win-appbar-menu>
            <win-toolbar>

      The new animations for the top AppBar use the Animations._resizeTransition helper now to ensure both animation components of the resize animation can begin at the same time.

--- a/src/less/colors-overlay.less
+++ b/src/less/colors-overlay.less
@@ -153,7 +153,6 @@
 
             &.win-menulayout {
                 .win-appbar-menu,
-                .win-appbar-toolbarcontainer,
                 .win-toolbar {
                     background-color: inherit;
                 }
