--- a/src/less/styles-overlay.less
+++ b/src/less/styles-overlay.less
@@ -417,18 +417,16 @@ AppBar menu layout
             left: 0;
             right: auto;
         });
-    }
 
-    .win-appbar-toolbarcontainer {
         overflow: hidden;
     }
 
-    &.win-bottom .win-appbar-toolbarcontainer {
-        overflow:visible;
+    &.win-bottom .win-appbar-menu {
+        overflow: visible;
     }
 
     .win-toolbar {
-        max-width:100vw;
+        max-width: 100vw;
     }
 
     &.win-appbar-compact {
